unpackaged/objects/Scanned_Business_Cards__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Used for populating the Name of the Account as indicated on the business card.</description>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Automatically populated based on matching logic</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Scanned Business Cards</relationshipLabel>
        <relationshipName>Scanned_Business_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>Logical one line output of Address fields (Street1, Street2, City, County, Country, Post Code)</description>
        <formula>if(LEN( Street1__c ) &gt; 0, Street1__c &amp; &quot;, &quot; , &quot;&quot; ) &amp;
if(LEN( Street2__c )&gt; 0, Street2__c &amp; &quot;, &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN( City__c )&gt; 0, City__c &amp; &quot;, &quot; , &quot;, &quot; ) &amp; BR() &amp;
if(LEN( Country__c ) &gt; 0, Country__c&amp; &quot;, &quot; , &quot;, &quot; ) &amp; BR() &amp;
If(LEN( Postcode__c ) &gt; 0, Postcode__c, &quot;&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>First_Name__c + &apos; &apos; +  Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Automatically populated based on matching logic</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Scanned Business Cards</relationshipLabel>
        <relationshipName>Scanned_Business_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Id__c</fullName>
        <description>Stores the external id of the user who created the record.</description>
        <externalId>true</externalId>
        <label>Created By Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Used for populating the Email of individual as indicated on the business card</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>Used for populating the Fax of individual as indicated on the business card</description>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Used for populating the First Name of individual as indicated on the business card</description>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>if(LEN( First_Name__c ) &gt; 0, &apos;Salutation &apos; + First_Name__c &amp; &quot;, &quot; , &quot;&quot; ) &amp;
if(LEN( Last_Name__c )&gt; 0, Last_Name__c  &amp; &quot;, &quot; , &quot;&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Used for populating the Last Name of individual as indicated on the business card</description>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <description>Used for populating the Mobile of individual as indicated on the business card.</description>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Used for tracking notes associated to this business card</description>
        <label>Notes</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Used for populating the Phone of individual as indicated on the business card.</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <description>Used for populating the salutation of individual as indicated on the business card</description>
        <label>Salutation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Country__c</fullName>
        <label>State / Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Stores the status of the business card. Incomplete indicates card has been scanned but not mapped to contact &amp; account, while complete indicates card is scanned and mapped to contact / account</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                    <default>true</default>
                    <label>Incomplete</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street1__c</fullName>
        <label>Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street2__c</fullName>
        <label>Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Used for populating the Title of individual as indicated on the business card</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Scanned Business Card</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Card-{00000000}</displayFormat>
        <label>Card Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scanned Business Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>